--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
         
     </footer>
 
-    <div class="login_container">
+    <!-- <div class="login_container">
         <div class="login_wrap commonFrame">
             <div class="login_box">
                 <div class="login_box_left">
@@ -297,7 +297,7 @@
             </div>
             
         </div>
-    </div>
+    </div> -->
 
 
 
